tests/expectations/compiler/address/gt_fail.out
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:7:12
     |
   7 |     return x > sender;
     |            ^
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:7:16
     |
   7 |     return x > sender;
     |                ^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
